[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-audit-framework"
version = "2.0.0"
description = "Professional GitHub Organization Audit Framework with Deep-Dive Analysis and Configuration Management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "DevSecOps Team"}
]
keywords = ["github", "audit", "security", "compliance", "organization", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Spanish",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dateutil>=2.8.2",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",
]

[project.scripts]
gh-audit = "gh_audit.cli:app"

[project.urls]
Documentation = "https://github.com/VoodoOps/gh-api-mgmt"
Repository = "https://github.com/VoodoOps/gh-api-mgmt"
Issues = "https://github.com/VoodoOps/gh-api-mgmt/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_audit"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle
    "F",           # Pyflakes
    "I",           # isort
    "N",           # pep8-naming
    "C90",         # mccabe
    "UP",          # pyupgrade
    "B",           # flake8-bugbear
    "A",           # flake8-builtins
    "COM",         # flake8-commas
    "C4",          # flake8-comprehensions
    "PIE",         # flake8-pie
    "SIM",         # flake8-simplify
    "RUF",         # Ruff-specific
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["gh_audit"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "venv"]
typeCheckingMode = "strict"
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportPrivateImportUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/gh_audit --cov-report=html --cov-report=term"
python_files = ["test_*.py", "*_test.py"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require GitHub token)",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src/gh_audit"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*Protocol\\):",
    "@abstractmethod",
]
